--- a/assets/styles/components/card-v9.scss
+++ b/assets/styles/components/card-v9.scss
@@ -111,7 +111,7 @@ Descr: Container of information used as teaser for further content exploration
       // background: rgba(27, 53, 80, 0.5) !important;
       // background-blend-mode: multiply;
       background: $color-primary-lighter;
-      border: 6px solid $color-black;
+      @include border();
       padding: 20px;
     }
   }
