--- a/assets/styles/product/product-thumbnail.scss
+++ b/assets/styles/product/product-thumbnail.scss
@@ -2,7 +2,7 @@
 ================================================== */
 
 $product-hover-text: {{ settings.product_hover_text_color }};
-$product-hover-bg: {{ settings.product_hover_bg_color | color_modify: 'alpha', 0.7 }};
+$product-hover-bg: {{ settings.product_hover_bg_color | color_modify: 'alpha', 0.0 }};
 
 
 .product__thumbnail.has-padding-bottom {
@@ -11,16 +11,36 @@ $product-hover-bg: {{ settings.product_hover_bg_color | color_modify: 'alpha', 0
   }
 }
 
+
+// Hover effects
+.product__thumbnail, .list-collection__thumbnail {
+  padding: 20px 0 20px 20px;
+  @include filter-bg();
+  @include border;
+  &:hover {
+    // @include border;
+    filter: unset;
+    background: $color-white;
+    .product-image__wrapper, .product-wrap {
+      filter: unset;
+      -webkit-filter: unset;
+}
+  }
+}
+
+
 .product-image__wrapper {
   position: relative;
-
+  background: $color-white;
+  // @include filter-bg();
   video,
   iframe {
     width: 100%;
   }
 
   &:hover {
-
+    
+    
     .thumbnail-overlay__container {
       @include flexbox();
 
