--- a/assets/styles/templates/blog.scss
+++ b/assets/styles/templates/blog.scss
@@ -1,7 +1,7 @@
 /* # Blog
 ================================================== */
 
-$blog-border: thin solid $border !default;
+$blog-border: 3px solid $border !default;
 
 .blog__filter {
   margin-bottom: 20px;
