--- a/assets/styles/components/form.scss
+++ b/assets/styles/components/form.scss
@@ -2,7 +2,7 @@
 ================================================== */
 
 $input-color: $grey-darker !default;
-$input-background-color: $white !default;
+$input-background-color: transparent !default;
 $input-border-color: $grey-lighter !default;
 $input-height: $control-height !default;
 $input-shadow: none;
@@ -57,6 +57,7 @@ $textarea-with-secondary-btn-style: {{ settings.button_secondary_border_radius |
 
   background-color: $input-background-color;
   border-color: $input-border-color;
+  border: 3px solid $color-black;
   color: $input-color;
 
   @include placeholder {
