--- a/assets/styles/sections/search.scss
+++ b/assets/styles/sections/search.scss
@@ -1,7 +1,7 @@
 /* # Search
 ================================================== */
 
-$search-border: thin solid $border !default;
+$search-border: 3px solid $border !default;
 $search-border-radius: 0;
 
 .search-form {
