--- a/assets/styles/templates/password.scss
+++ b/assets/styles/templates/password.scss
@@ -100,7 +100,7 @@
     position: absolute;
     right: 10px;
     top: 10px;
-    border: thin solid {{ settings.border_color }};
+    border: 3px solid {{ settings.border_color }};
     font-size: 14px;
   }
 
