--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -23,14 +23,14 @@
         //   font-family: 'RocGrotesk';
         //   src: url('RocGroteskRegular.woff') format('woff');
         //   font-weight: 400;
-        //   font-style: normal; }
+        //   font-style: normal; } 
         // @font-face {
         //   font-family: 'RocGrotesk';
         //   src: url('RocGroteskLight.woff') format('woff');
         //   font-weight: 300;
         //   font-style: normal; }
 
-          h1, h1 a, h2, h2 a, h3, h3 a, h4, h4 a, h5, h5 a, h6, h6 a, #nav li a, div.title a, .headline, .subtitle, a, span { font-family: 'roc-grotesk' !important; }
+          h1, h1 a, h2, h2 a, h3, h3 a, h4, h4 a, h5, h5 a, h6, h6 a, #nav li a, div.title a, .headline, .subtitle, a, span, p, body, .button, select { font-family: 'roc-grotesk' !important; }
 
 body {
   font-family: {{ settings.regular__font.family }}, {{ settings.regular__font.fallback_families }};
@@ -39,7 +39,7 @@ body {
   color: {{ settings.regular_color }};
   line-height: 1.5;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased; 
   -moz-osx-font-smoothing: grayscale;
   font-smoothing: antialiased;
 }
