--- a/snippets/product-thumbnail.liquid
+++ b/snippets/product-thumbnail.liquid
@@ -63,6 +63,7 @@
   {% endif %}
   thumbnail
   product__thumbnail
+  margin-y-md
   product__grid-item
   thumbnail__hover-overlay--{{ hover_enabled }}
   has-padding-bottom"
