--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -9777,9 +9777,12 @@ $product-hover-bg: {{ settings.product_hover_bg_color | color_modify: 'alpha', 0
 }
 
 
+.product__thumbnail {
+  padding: 20px 0 20px 20px;
+}
+
 // Hover effects
 .product__thumbnail, .list-collection__thumbnail {
-  padding: 20px 0 20px 20px;
   @include filter-bg();
   @include border;
   &:hover {
@@ -9792,6 +9795,7 @@ $product-hover-bg: {{ settings.product_hover_bg_color | color_modify: 'alpha', 0
 }
   }
 }
+
 
 
 .product-image__wrapper {
@@ -13132,7 +13136,7 @@ $banner-font-size: {{ settings.banner_text_size }}px;
   .product-wrap {
     position: relative;
     overflow: hidden;
-    min-height: 400px;
+    height: 300px;
     background: $color-white;
 
     &:hover img,
