--- a/assets/styles/product/product-thumbnail.scss
+++ b/assets/styles/product/product-thumbnail.scss
@@ -12,9 +12,12 @@ $product-hover-bg: {{ settings.product_hover_bg_color | color_modify: 'alpha', 0
 }
 
 
+.product__thumbnail {
+  padding: 20px 0 20px 20px;
+}
+
 // Hover effects
 .product__thumbnail, .list-collection__thumbnail {
-  padding: 20px 0 20px 20px;
   @include filter-bg();
   @include border;
   &:hover {
@@ -27,6 +30,7 @@ $product-hover-bg: {{ settings.product_hover_bg_color | color_modify: 'alpha', 0
 }
   }
 }
+
 
 
 .product-image__wrapper {
