--- a/assets/styles/sections/list-collections.scss
+++ b/assets/styles/sections/list-collections.scss
@@ -18,7 +18,7 @@
   .product-wrap {
     position: relative;
     overflow: hidden;
-    min-height: 400px;
+    height: 300px;
     background: $color-white;
 
     &:hover img,
