--- a/sections/index__icon-with-text-column.liquid
+++ b/sections/index__icon-with-text-column.liquid
@@ -39,6 +39,7 @@
 
   .icon-column__title {
     color: {%- if text_alpha != 0 -%}{{ section.settings.text_color }}{%- endif -%};
+    margin-bottom: 0;
   }
 
   .icon {
