--- a/assets/styles/components/card-v9.scss
+++ b/assets/styles/components/card-v9.scss
@@ -50,37 +50,6 @@ Descr: Container of information used as teaser for further content exploration
   z-index: 2;
 }
 
-// .card-v9__btn {
-//   position: relative;
-//   display: inline-block;
-//   padding: 20px !important;
-
-//   box-shadow: none !important;
-//   opacity: 0;
-//   span {
-//     // button label
-//     position: relative;
-//     z-index: 2;
-//     color: $color-bg;
-//     opacity: 0;
-//     transition: opacity 0.3s;
-//   }
-
-//   &::after {
-//     content: "";
-//     position: absolute;
-//     z-index: 1;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     background-color: alpha(($color-contrast-lower), 0.8);
-//     opacity: 0;
-//     transform: translateY(25%);
-//     transition: opacity 0.3s, transform 0.3s ease-out);
-//   }
-// }
-
 .card-v9:hover {
   // .card-v9__btn {
   //   span {
@@ -108,6 +77,9 @@ Descr: Container of information used as teaser for further content exploration
   }
   &:hover {
     backdrop-filter: blur(34px);
+    .reveal-content {
+      opacity: 1;
+    }
     &::before {
       // background: rgba(27, 53, 80, 0.5) !important;
       // background-blend-mode: multiply;
