--- a/assets/styles/sections/list-collections.scss
+++ b/assets/styles/sections/list-collections.scss
@@ -12,13 +12,20 @@
   }
 }
 
+//Home hero height
+.image-with-text-overlay__banner > div:nth-child(1) > img:nth-child(1) {
+  @media only screen and (max-width: 600px) {
+    height: 450px;
+  }
+}
+
 .list-collection__thumbnail {
   overflow: hidden;
 
   .product-wrap {
     position: relative;
     overflow: hidden;
-    height: 300px;
+    // height: 300px;
     background: $color-white;
 
     &:hover img,
