--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -13684,7 +13684,9 @@ $banner-font-size: {{ settings.banner_text_size }}px;
 
 #header .is-width-wide .mega-menu {
   width: calc(100% + #{$gutter});
-  left: calc(-#{$gutter} / 2); // Used to break out of the container on full width
+  left: calc(
+    -#{$gutter} / 2
+  ); // Used to break out of the container on full width
 }
 
 .header--search-focus .mega-menu {
@@ -13704,7 +13706,7 @@ $banner-font-size: {{ settings.banner_text_size }}px;
   z-index: 20;
   box-shadow: 0 8px 8px rgba($black, 0.1);
 
-  @include respond-to('medium-down') {
+  @include respond-to("medium-down") {
     box-shadow: 0;
   }
 
@@ -13731,6 +13733,7 @@ $banner-font-size: {{ settings.banner_text_size }}px;
     margin-bottom: 10px;
     font-size: $drop-down-menu-heading-font-size;
     line-height: 1.2;
+    font-weight: 500;
   }
 
   .mega-menu__linklist-link {
@@ -13748,8 +13751,7 @@ $banner-font-size: {{ settings.banner_text_size }}px;
   padding: 20px;
 
   &.block__empty-column {
-
-    @include respond-to('medium-down') {
+    @include respond-to("medium-down") {
       display: none;
     }
   }
@@ -13803,7 +13805,6 @@ $banner-font-size: {{ settings.banner_text_size }}px;
 }
 
 .mega-menu__section.is-active {
-
   .mega-menu {
     display: block;
   }
@@ -16462,9 +16463,14 @@ $color-primary: hsl(41, 44%, 37%);
 }
 
 // Style
+
+.border {
+  border: 3px solid $color-black;
+}
 .blend {
   mix-blend-mode: difference;
 }
+
 .noise {
   top: 0;
   left: 0;
