--- a/assets/styles/sections/mega-menu.scss
+++ b/assets/styles/sections/mega-menu.scss
@@ -7,7 +7,9 @@
 
 #header .is-width-wide .mega-menu {
   width: calc(100% + #{$gutter});
-  left: calc(-#{$gutter} / 2); // Used to break out of the container on full width
+  left: calc(
+    -#{$gutter} / 2
+  ); // Used to break out of the container on full width
 }
 
 .header--search-focus .mega-menu {
@@ -27,7 +29,7 @@
   z-index: 20;
   box-shadow: 0 8px 8px rgba($black, 0.1);
 
-  @include respond-to('medium-down') {
+  @include respond-to("medium-down") {
     box-shadow: 0;
   }
 
@@ -54,6 +56,7 @@
     margin-bottom: 10px;
     font-size: $drop-down-menu-heading-font-size;
     line-height: 1.2;
+    font-weight: 500;
   }
 
   .mega-menu__linklist-link {
@@ -71,8 +74,7 @@
   padding: 20px;
 
   &.block__empty-column {
-
-    @include respond-to('medium-down') {
+    @include respond-to("medium-down") {
       display: none;
     }
   }
@@ -126,7 +128,6 @@
 }
 
 .mega-menu__section.is-active {
-
   .mega-menu {
     display: block;
   }
