--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -11219,6 +11219,7 @@ $shop_bg_color: {{ settings.shop_bg_color }};
   font-size: $footer_heading_font_size;
   color: $footer_text_color;
   margin-bottom: 10px;
+  font-weight: 500;
 }
 
 .footer__block {
