added newsletter to homepage

--- a/sections/product-image-scroll__main.liquid
+++ b/sections/product-image-scroll__main.liquid
@@ -325,7 +325,7 @@
 
         {% elsif block.type == 'recommended_products' %}
           {% comment %} Recommended products {% endcomment %}
-          <section class="section is-width-{{ width }}" data-product-recommendations-container
+          <section class="section is-width-standard" data-product-recommendations-container
               {% if animation != "none" %}
                 data-scroll-class="{{ animation }}"
               {% endif %}>
