--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -6812,11 +6812,12 @@ $textarea-with-secondary-btn-style: {{ settings.button_secondary_border_radius |
 }
 
 .newsletter__wrapper {
-  padding: 40px;
+  padding: 100px 40px;
   max-width: 55%;
 
   @include respond-to('small-down') {
     max-width: 100%;
+    padding: 40px;
   }
 }
 
